deploy and remove trash